<resources>
    <string name="app_name">chicken</string>

    <string name="menu_title">Main Menu</string>
    <string name="btn_start">Start</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_score">Score</string>
    <string name="btn_exit">Exit</string>

    <string name="language_label">Language</string>
    <string name="score_coming_soon">Score screen is coming soon</string>

    <string name="settings_title">Settings</string>

    <string name="controls_title">Control Method</string>
    <string name="ctrl_buttons">Buttons</string>
    <string name="ctrl_tilt">Tilt</string>

    <string name="grid_size_title">Grid Size</string>
    <string name="grid_x">Columns</string>
    <string name="grid_y">Rows</string>
    <string name="apply">Save Settings</string>
    <string name="saved">Settings Saved!</string>

    <string name="summary_grid">Grid: %1$d x %2$d</string>
    <string name="summary_speed">Tick: %1$.1fs | Spawn: %2$.1fs</string>

    <string name="score_label">Score: %1$d</string>

    <string name="game_over_title">Game Over</string>
    <string name="game_over_message">Your score: %1$d</string>
    <string name="restart">Restart</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>

    <string name="hit_toast">Ouch! Hit!</string>
    <string name="speed_title">Game Speed</string>

    <string name="speed_slow">Slow</string>
    <string name="speed_medium">Medium</string>
    <string name="speed_fast">Fast</string>

    <string name="audio_title">Audio</string>
    <string name="audio_music">Music</string>
    <string name="audio_sfx">Sound FX</string>

    <string name="paused">PAUSED</string>
    <string name="resume">Resume</string>
    <string name="exit_menu">Main Menu</string>
    <string name="final_score_label">Final Score</string>

    <string name="new_high_score_title">NEW HIGH SCORE!</string>
    <string name="enter_name_hint">Enter Your Name</string>
    <string name="location_label">Location:</string>
    <string name="radio_gps">Save GPS Location</string>
    <string name="radio_no_gps">Don\'t Save Location</string>
    <string name="btn_save_restart">SAVE &amp; RESTART</string>
    <string name="default_player_name">Commander</string>
</resources>